--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
                           <span class="author-block">
                             <a href="https://scholar.google.com/citations?user=uoedFW8AAAAJ" target="_blank">Yilong Wu</a><sup>*</sup>,</span>
                           <span class="author-block">
+                              <a href="https://saids.ustc.edu.cn/2025/0319/c36359a677387/page.htm" target="_blank">Wuyang Zhang</a><sup>†</sup>,</span>
+                          <span class="author-block">
                             <a href="https://wenhaoyu1998.github.io/" target="_blank">Yuwen Hao</a>,</span>
                           <span class="author-block">
                             <a href="https://xinranz-ustc.github.io/" target="_blank">Xinran Zhang</a>,</span>
                           <span class="author-block">
                             <a href="https://scholar.google.com/citations?user=LU2N-TAAAAAJ" target="_blank">Yedong Shen</a>,</span>
                             <br>
-                          <span class="author-block">
-                            <a href="https://saids.ustc.edu.cn/2025/0319/c36359a677387/page.htm" target="_blank">Wuyang Zhang</a>,</span>
                           <span class="author-block">
                             <a href="http://staff.ustc.edu.cn/~jianmin/" target="_blank">Jianmin Ji</a>,</span>
                           <span class="author-block">
@@ -72,7 +72,7 @@
 
                         <div class="is-size-5 publication-authors">
                             <span class="author-block"><sup>*</sup> Equal contribution</span>
-                            <span class="author-block"><sup>+</sup> Equal advising</span>
+                            <span class="author-block"><sup>+</sup> Equal advisor</span>
                         </div>
 
                         <div class="is-size-5 publication-authors">
@@ -187,7 +187,7 @@
     </section>
 
 
-    <section class="hero is-light is-small">
+    <section class="hero">
       <div class="hero-body">
           <div class="container">
               <h2 class="title is-3 has-text-centered">Experimental Configurations</h2>
