--- a/index.html
+++ b/index.html
@@ -56,8 +56,6 @@
                           <span class="author-block">
                             <a href="https://scholar.google.com/citations?user=uoedFW8AAAAJ" target="_blank">Yilong Wu</a><sup>*</sup>,</span>
                           <span class="author-block">
-                              <a href="https://saids.ustc.edu.cn/2025/0319/c36359a677387/page.htm" target="_blank">Wuyang Zhang</a><sup>†</sup>,</span>
-                          <span class="author-block">
                             <a href="https://wenhaoyu1998.github.io/" target="_blank">Yuwen Hao</a>,</span>
                           <span class="author-block">
                             <a href="https://xinranz-ustc.github.io/" target="_blank">Xinran Zhang</a>,</span>
@@ -72,7 +70,7 @@
 
                         <div class="is-size-5 publication-authors">
                             <span class="author-block"><sup>*</sup> Equal contribution</span>
-                            <span class="author-block"><sup>+</sup> Equal advisor</span>
+                            <span class="author-block"><sup>+</sup> Corresponding Author</span>
                         </div>
 
                         <div class="is-size-5 publication-authors">
