--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                           <span class="author-block">
                             <a href="https://scholar.google.com/citations?user=uoedFW8AAAAJ" target="_blank">Yilong Wu</a><sup>*</sup>,</span>
                           <span class="author-block">
-                            <a href="https://wenhaoyu1998.github.io/" target="_blank">Yuwen Hao</a>,</span>
+                            <a href="https://wenhaoyu1998.github.io/" target="_blank">Wenhao Yu</a>,</span>
                           <span class="author-block">
                             <a href="https://xinranz-ustc.github.io/" target="_blank">Xinran Zhang</a>,</span>
                           <span class="author-block">
@@ -65,12 +65,12 @@
                           <span class="author-block">
                             <a href="http://staff.ustc.edu.cn/~jianmin/" target="_blank">Jianmin Ji</a>,</span>
                           <span class="author-block">
-                            <a href="http://staff.ustc.edu.cn/~yanyongz/" target="_blank">Yanyong Zhang</a><sup>†</sup></span>
+                            <a href="http://staff.ustc.edu.cn/~yanyongz/" target="_blank">Yanyong Zhang</a><sup>✉</sup></span>
                         </div>
 
                         <div class="is-size-5 publication-authors">
                             <span class="author-block"><sup>*</sup> Equal contribution</span>
-                            <span class="author-block"><sup>+</sup> Corresponding Author</span>
+                            <span class="author-block"><sup>✉</sup> Corresponding Author</span>
                         </div>
 
                         <div class="is-size-5 publication-authors">
