--- a/index.html
+++ b/index.html
@@ -85,20 +85,20 @@
                             <div class="publication-links">
                                 <!-- PDF Link. -->
                                 <span class="link-block">
-                                    <a href="xxx" class="external-link button is-normal is-rounded is-dark">
+                                    <a href="./static/RSS_UAVM_cameraready.pdf" class="external-link button is-normal is-rounded is-dark">
                                         <span class="icon">
                                             <i class="fas fa-file-pdf"></i>
                                         </span>
-                                        <span>Paper(Coming soon)</span>
+                                        <span>Paper</span>
                                     </a>
                                 </span>
                                 <span class="link-block">
-                                    <a href="https://arxiv.org/pdf/xxx"
+                                    <a href="https://arxiv.org/abs/2504.18792"
                                         class="external-link button is-normal is-rounded is-dark">
                                         <span class="icon">
                                             <i class="ai ai-arxiv"></i>
                                         </span>
-                                        <span>arXiv(Coming soon)</span>
+                                        <span>arXiv</span>
                                     </a>
                                 </span>
                                 <!-- Video Link. -->
@@ -135,7 +135,7 @@
                 <h2 class="title is-3">Overview Video</h2>
                 <!-- invert static/videos/intro.mov -->
                 <video poster="" id="intro" autoplay controls muted loop playsinline height="100%">
-                    <source src="./static/videos/demo_zip.mp4" type="video/mp4">
+                    <source src="./static/videos/demo_cameraready_zip2.mp4" type="video/mp4">
                 </video>
             </div>
         </div>
@@ -298,7 +298,15 @@
         <div class="container is-max-desktop content">
             <h2 class="title">BibTeX</h2>
             <pre><code>
-            coming soon
+            @misc{duan2025stdarmtransferringvisuomotorpolicies,
+                title={STDArm: Transferring Visuomotor Policies From Static Data Training to Dynamic Robot Manipulation}, 
+                author={Yifan Duan and Heng Li and Yilong Wu and Wenhao Yu and Xinran Zhang and Yedong Shen and Jianmin Ji and Yanyong Zhang},
+                year={2025},
+                eprint={2504.18792},
+                archivePrefix={arXiv},
+                primaryClass={cs.RO},
+                url={https://arxiv.org/abs/2504.18792}, 
+            }
             </code></pre>
         </div>
     </section>
