--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             <div class="publication-links">
                                 <!-- PDF Link. -->
                                 <span class="link-block">
-                                    <a href="./static/RSS_UAVM_cameraready.pdf" class="external-link button is-normal is-rounded is-dark">
+                                    <a href="./static/pdf/RSS_UAVM_cameraready.pdf" class="external-link button is-normal is-rounded is-dark">
                                         <span class="icon">
                                             <i class="fas fa-file-pdf"></i>
                                         </span>
@@ -102,15 +102,15 @@
                                     </a>
                                 </span>
                                 <!-- Video Link. -->
-                                <!-- <span class="link-block">
-                                    <a href="https://www.youtube.com/watch?v=MrKrnHhk8IA"
+                                <span class="link-block">
+                                    <a href="https://www.youtube.com/watch?v=SXGMIAGoC5w"
                                         class="external-link button is-normal is-rounded is-dark">
                                         <span class="icon">
                                             <i class="fab fa-youtube"></i>
                                         </span>
                                         <span>Video</span>
                                     </a>
-                                </span> -->
+                                </span>
                                 <!-- Code Link. -->
                                 <span class="link-block">
                                     <a href="https://github.com/yjsx/STDArm"
@@ -133,10 +133,11 @@
         <div class="container is-max-desktop">
             <div class="content has-text-centered">
                 <h2 class="title is-3">Overview Video</h2>
-                <!-- invert static/videos/intro.mov -->
-                <video poster="" id="intro" autoplay controls muted loop playsinline height="100%">
+                <!-- <video poster="" id="intro" autoplay controls muted loop playsinline height="100%">
                     <source src="./static/videos/demo_cameraready_zip2.mp4" type="video/mp4">
-                </video>
+                </video> -->
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/SXGMIAGoC5w?si=VmtNDP0RF5_kaMve" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
             </div>
         </div>
     </section>
@@ -157,7 +158,7 @@
                           The core of STDArm is a real-time action correction framework consisting of: (1) an action manager to boost control frequency and maintain temporal consistency, (2) a stabilizer with a lightweight prediction network to compensate for motion disturbances , and (3) an online latency estimation module for calibrating system parameters. By this way, STDArm achieves centimeter-level precision in mobile manipulation tasks. 
                           <br>
                           <br>
-                          We conduct comprehensive evaluations of the proposed STDArm on two types of robotic arms, three types of mobile platforms, and three tasks. Experimental results indicate that the STDArm enables real-time compensation for platform motion disturbances while preserving the original policy's manipulation capabilities, achieving centimeter-level operational precision during robot motion.
+                          We conduct comprehensive evaluations of the proposed STDArm on two types of robotic arms, four types of mobile platforms, and three tasks. Experimental results indicate that the STDArm enables real-time compensation for platform motion disturbances while preserving the original policy's manipulation capabilities, achieving centimeter-level operational precision during robot motion.
                         </p>
                     </div>
                 </div>
